[package]
name = "rs_stun"
version = "0.1.0"
authors = ["js-depond <js-depond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { package = "webrtc-util", version = "0.1.6" }
lazy_static = "1.3.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.2.0"
rand = "0.8.0"
base64 = "0.13.0"
subtle = "2.1.1"
crc32fast = "1.2.1"
ring = "0.16.19"
md-5 = "0.9.1"